--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Widget Example</title>
+    <title>Widget Demo</title>
 </head>
 <body>
     <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
@@ -11,7 +11,7 @@
     </div>
 
     <script src="widget.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/gh/00mikhael/widget-sample@latest/widget.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/gh/00mikhael/widget-sample@latest/widget.js"></script>
     <script>
         LAWMAai.init({
             name: 'LAWMA.ai',
