--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </div>
 
     <script src="widget.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/00mikhael/widget-sample@latest/widget.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/gh/00mikhael/widget-sample@latest/widget.js"></script> -->
     <script>
         LAWMAai.init({
             name: 'LAWMA.ai',
