--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Widget Demo</title>
+    <title>Widget Development Enviroment</title>
 </head>
 <body>
     <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
-        <h1>Demo Application</h1>
+        <h1>Widget Development Enviroment</h1>
     </div>
 
     <script src="widget.js"></script>
     <script>
         LAWMAai.init({
-            name: 'LAWMA.ai',
+            name: 'Dev.ai',
             apiKey:'example key'
         });
     </script>
