--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <script>
         LAWMAai.init({
             name: 'Dev.ai',
-            apiKey:'example key'
+            apiKey:'example key',
+            className: 'lawma-widget',
         });
     </script>
 </body>
