--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="widget.js"></script>
     <script>
         LAWMAai.init({
-            name: 'Dev.ai',
+            name: 'Mixhers AI Assistant',
             apiKey:'example key',
             className: 'lawma-widget',
         });
