--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         LAWMAai.init({
             name: 'Mixhers AI Assistant',
             apiKey:'example key',
-            className: 'lawma-widget',
+            primaryColor: 'indigo',
         });
     </script>
 </body>
