--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Widget Development Enviroment</title>
 </head>
 <body>
-    <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+    <div style="display: flex; justify-content: center; align-items: center;">
         <h1>Widget Development Enviroment</h1>
     </div>
 
@@ -15,7 +15,7 @@
         LAWMAai.init({
             name: 'Mixhers AI Assistant',
             apiKey:'example key',
-            primaryColor: 'indigo',
+            // primaryColor: 'indigo',
         });
     </script>
 </body>
