--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Widget Development Enviroment</title>
 </head>
 <body>
-    <div style="display: flex; justify-content: center; align-items: center;">
+    <div style="display: flex; justify-content: center; align-items: center; height: 100vh;">
         <h1>Widget Development Enviroment</h1>
     </div>
 
