--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <script src="widget.js"></script>
     <script>
         LAWMAai.init({
-            name: 'Mixhers AI Assistant',
+            name: 'Mixhers AI Assistan',
             apiKey:'example key',
-            // primaryColor: 'indigo',
+            primaryColor: 'indigo',
         });
     </script>
 </body>
