--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             name: 'Mixhers AI Assistan',
             apiKey:'example key',
             primaryColor: 'indigo',
+            position: 'center-right'
         });
     </script>
 </body>
