--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         LAWMAai.init({
             name: 'Mixhers AI Assistan',
             apiKey:'example key',
-            primaryColor: 'indigo',
-            position: 'center-right'
+            // primaryColor: 'indigo',
+            // position: 'center-right'
         });
     </script>
 </body>
