--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <script src="widget.js"></script>
     <script>
         LAWMAai.init({
-            name: 'Mixhers AI Assistan',
+            name: 'Mixhers AI Assistant',
             apiKey:'example key',
-            // primaryColor: 'indigo',
+            primaryColor: '#1f2937',
             // position: 'center-right'
         });
     </script>
