--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         LAWMAai.init({
             name: 'Mixhers AI Assistant',
             apiKey:'example key',
-            primaryColor: '#1f2937',
+            primaryColor: '	#003747',
+            position: 'bottom-right',
+            // primaryColor: '#1f2937',
             // position: 'center-right'
         });
     </script>
