--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
     <script>
         LAWMAai.init({
             name: 'Mixhers AI Assistant',
-            apiKey:'example key',
+            apiKey:'xxx key',
             primaryColor: '	#003747',
             position: 'bottom-right',
-            // primaryColor: '#1f2937',
-            // position: 'center-right'
+            welcomeMessage: "How can I assist you today?",
         });
     </script>
 </body>
