--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
             apiKey:'xxx key',
             primaryColor: '	#003747',
             position: 'bottom-right',
-            welcomeMessage: "How can I assist you today?",
+            welcomeMessages: [
+                "Hello! How can I assist you with Mixhers supplements today?",
+                "Questions about Mixhers supplements? Ask away!",
+                "Ask me about Hertime PMS relief supplements!",
+                "Curious about Mixhers for painful cramps? Ask me anything!",
+                "Need info on Mixhers' metabolism boosters?",
+                "Ask about Mixhers' digestion support.",
+                "Learn about Mixhers' sleep aids."
+            ],
         });
     </script>
 </body>
