--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
             name: 'Mixhers AI Assistant',
             apiKey:'xxx key',
             primaryColor: '	#003747',
-            position: 'bottom-right',
-            welcomeMessages: [
-                "Hello! How can I assist you with Mixhers supplements today?",
-                "Questions about Mixhers supplements? Ask away!",
-                "Ask me about Hertime PMS relief supplements!",
-                "Curious about Mixhers for painful cramps? Ask me anything!",
-                "Need info on Mixhers' metabolism boosters?",
-                "Ask about Mixhers' digestion support.",
-                "Learn about Mixhers' sleep aids."
-            ],
+            // position: 'bottom-right',
+            // welcomeMessages: [
+            //     "Hello! How can I assist you with Mixhers supplements today?",
+            //     "Questions about Mixhers supplements? Ask away!",
+            //     "Ask me about Hertime PMS relief supplements!",
+            //     "Curious about Mixhers for painful cramps? Ask me anything!",
+            //     "Need info on Mixhers' metabolism boosters?",
+            //     "Ask about Mixhers' digestion support.",
+            //     "Learn about Mixhers' sleep aids."
+            // ],
         });
     </script>
 </body>
