ui improvements and updates

--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
         LAWMAai.init({
             name: 'Mixhers AI Assistant',
             apiKey:'xxx key',
-            primaryColor: '	#003747',
+            // primaryColor: '	#003747',
+            // primaryColor: '#2f3b22',
             // position: 'bottom-right',
-            // welcomeMessages: [
-            //     "Hello! How can I assist you with Mixhers supplements today?",
-            //     "Questions about Mixhers supplements? Ask away!",
-            //     "Ask me about Hertime PMS relief supplements!",
-            //     "Curious about Mixhers for painful cramps? Ask me anything!",
-            //     "Need info on Mixhers' metabolism boosters?",
-            //     "Ask about Mixhers' digestion support.",
-            //     "Learn about Mixhers' sleep aids."
-            // ],
+            welcomeMessages: [
+                "Hello! How can I assist you with Mixhers supplements today?",
+                "Questions about Mixhers supplements? Ask away!",
+                "Ask me about Hertime PMS relief supplements!",
+                "Curious about Mixhers for painful cramps? Ask me anything!",
+                "Need info on Mixhers' metabolism boosters?",
+                "Ask about Mixhers' digestion support.",
+                "Learn about Mixhers' sleep aids."
+            ],
         });
     </script>
 </body>
