--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             apiKey:'xxx key',
             // primaryColor: '	#003747',
             // primaryColor: '#2f3b22',
-            // position: 'bottom-right',
+            //  primaryColor: 'green',
+            // primaryColor: 'indigo',
+            // primaryColor: 'orange',
+            position: 'center-left',
             welcomeMessages: [
                 "Hello! How can I assist you with Mixhers supplements today?",
                 "Questions about Mixhers supplements? Ask away!",
