--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
             //  primaryColor: 'green',
             // primaryColor: 'indigo',
             // primaryColor: 'orange',
-            position: 'center-left',
+            // position: 'center-left',
+            // position: 'bottom-left',
+            // position: 'top-left',
+            // position: 'top-right',
+            // position: 'center-right',
+            // position: 'bottom-right',
             welcomeMessages: [
                 "Hello! How can I assist you with Mixhers supplements today?",
                 "Questions about Mixhers supplements? Ask away!",
