--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             //  primaryColor: 'green',
             // primaryColor: 'indigo',
             // primaryColor: 'orange',
-            primaryColor: '#444444',
+            // primaryColor: '#444444',
             // position: 'center-left',
             // position: 'bottom-left',
             // position: 'top-left',
