--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <script>
         LAWMAai.init({
             name: 'Mixhers AI Assistant',
-            apiKey:'xxx key',
+            apiKey:'xxxxxx',
             // primaryColor: '	#003747',
             // primaryColor: '#2f3b22',
-            //  primaryColor: 'green',
+            // primaryColor: 'green',
             // primaryColor: 'indigo',
             // primaryColor: 'orange',
             // primaryColor: '#444444',
