--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <h1>Widget Development Enviroment</h1>
     </div>
 
-    <script src="widget.js"></script>
+    <!-- <script src="widget.js"></script> -->
+    <script src="https://bitweavestorageaccount.z13.web.core.windows.net/widget.js"></script>
     <script>
         LAWMAai.init({
             name: 'Mixhers AI Assistant',
