--- a/index.html
+++ b/index.html
@@ -29,13 +29,21 @@
             // position: 'center-right',
             // position: 'bottom-right',
             welcomeMessages: [
-                "Hello! How can I assist you with Mixhers supplements today?",
+                "Hello! How can I assist you with Mixhers supplements today? assist you with Mixhers supplements today?",
                 "Questions about Mixhers supplements? Ask away!",
                 "Ask me about Hertime PMS relief supplements!",
                 "Curious about Mixhers for painful cramps? Ask me anything!",
                 "Need info on Mixhers' metabolism boosters?",
                 "Ask about Mixhers' digestion support.",
                 "Learn about Mixhers' sleep aids."
+            ],
+            popularQuestionsTitle: "Frequently Asked Questions",
+            popularQuestions: [
+                "Tell me about Young Living’s Loyalty Rewards.",
+                "What Young Living products can help me with gut health?",
+                "What is the history of essential oils?",
+                "Show me videos about the benefits of Ningxia Red.",
+                "Show me videos about the benefits of Ningxia Red."
             ],
         });
     </script>
