--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <script>
         LAWMAai.init({
             name: 'Mixhers AI Assistant',
-            apiKey:'xxxxxx',
+            apiKey:'bw_U337CBPmFcjKEoxad3R80jKaOzJLUlUOAKSBpi7QZS4',
+            primaryColor: '#046a38',
             // primaryColor: '	#003747',
             // primaryColor: '#2f3b22',
             // primaryColor: 'green',
