update logo and name rendering

--- a/index.html
+++ b/index.html
@@ -14,21 +14,9 @@
     <!-- <script src="https://bitweavestorageaccount.z13.web.core.windows.net/widget.js"></script> -->
     <script>
         LAWMAai.init({
-            name: 'Mixhers AI Assistant',
+            name: 'Young Living AI Assistant',
             apiKey:'bw_U337CBPmFcjKEoxad3R80jKaOzJLUlUOAKSBpi7QZS4',
             primaryColor: '#046a38',
-            // primaryColor: '	#003747',
-            // primaryColor: '#2f3b22',
-            // primaryColor: 'green',
-            // primaryColor: 'indigo',
-            // primaryColor: 'orange',
-            // primaryColor: '#444444',
-            // position: 'center-left',
-            // position: 'bottom-left',
-            // position: 'top-left',
-            // position: 'top-right',
-            // position: 'center-right',
-            // position: 'bottom-right',
             welcomeMessages: [
                 "Hello! How can I assist you with Mixhers supplements today? assist you with Mixhers supplements today?",
                 "Curious about Mixhers for painful cramps? Ask me anything!",
