add max length to widget name

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script>
         LAWMAai.init({
             name: 'Young Living AI Assistant',
+            // logo_url: 'https://img.freepik.com/free-vector/bird-colorful-logo-gradient-vector_343694-1365.jpg?semt=ais_hybrid&w=740',
             apiKey:'bw_U337CBPmFcjKEoxad3R80jKaOzJLUlUOAKSBpi7QZS4',
             primaryColor: '#046a38',
             welcomeMessages: [
