add askai param

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <script>
         LAWMAai.init({
             name: 'Young Living AI Assistant',
-            // logo_url: 'https://img.freepik.com/free-vector/bird-colorful-logo-gradient-vector_343694-1365.jpg?semt=ais_hybrid&w=740',
+            logo_url: 'https://bitweavestorageaccount.z13.web.core.windows.net/lawma/yl/yliving.png',
+            primaryColor: '#055346',
             apiKey:'bw_U337CBPmFcjKEoxad3R80jKaOzJLUlUOAKSBpi7QZS4',
-            primaryColor: '#046a38',
             welcomeMessages: [
                 "Hello! How can I assist you with Mixhers supplements today? assist you with Mixhers supplements today?",
                 "Curious about Mixhers for painful cramps? Ask me anything!",
